# CPP_Coursework

./: .gitignore  CMakeLists.txt  main.cpp  uml_class.puml
constants/: constants.h
engine/: FlightEngine.cpp  FlightEngine.h  PlaneEngine.cpp  PlaneEngine.h  RunwayEngine.cpp  RunwayEngine.h  StaffEngine.cpp  StaffEngine.h
engine/flight/: FlightEngine.cpp  FlightEngine.h  flight.cpp  flight.h
engine/flights-options/: FlightsOptions.cpp  FlightsOptions.h
engine/source/: FlightEngine.cpp  PlaneEngine.cpp  RunwayEngine.cpp  StaffEngine.cpp
model/: AirlinePlane.cpp  AirlinePlane.h  CargoPlane.cpp  CargoPlane.h  Flight.cpp  Flight.h  PassengerPlane.cpp  PassengerPlane.h  Plane.cpp  Plane.h  Runway.cpp  Runway.h  Staff.cpp  Staff.h
model/corp-data/: Flight.cpp  Flight.h  Runway.cpp  Runway.h  Staff.cpp  Staff.h
model/plane/: CargoPlane.cpp  CargoPlane.h  PassengerPlane.cpp  PassengerPlane.h  Plane.cpp  Plane.h
model/submodels/: Expenses.cpp  Expenses.h  Staff.cpp  Staff.h
model/utils/: FlightUtils.cpp  FlightUtils.h  PlaneUtils.cpp  PlaneUtils.h  RunwayUtils.cpp  RunwayUtils.h  StaffUtils.cpp  StaffUtils.h  Validation.cpp  flight_utils.cpp  flight_utils.h
model/utils/source/: FlightUtils.cpp  PlaneUtils.cpp  RunwayUtils.cpp  StaffUtils.cpp
resources/: assign-flights  flights  planes  runways  staff
